syntax = "proto3";

package user;

service UserService {
  rpc UpdateUserById (UpdateUserRequest) returns (UserResponse);
}

message UpdateUserRequest {
  string id = 1;
  string userName = 2;
  string email = 3;
  string fullName = 4;
  string address = 5;
  string gender = 6;
  string DOB = 7;
  string phoneNo = 8;
}

message User {
  string id = 1;
  string userName = 2;
  string email = 3;
  string fullName = 4;
  string address = 5;
  string gender = 6;
  string DOB = 7;
  string phoneNo = 8;
}

message UserResponse {
  bool success = 1;
  string message = 2;
  User user = 3;
}

message LoginResponse {
  bool success = 1;
  string message = 2;
  string token = 3;
}

message UserListResponse {
  bool success = 1;
  string message = 2;
  repeated User users = 3;
}
